tests/ui/linkage-attr/linkage3.stderr
error[E0539]: malformed `linkage` attribute input
  --> $DIR/linkage3.rs:6:5
   |
LL |     #[linkage = "foo"]
   |     ^^^^^^^^^^^^-----^
   |                 |
   |                 valid arguments are `available_externally`, `common`, `extern_weak`, `external`, `internal`, `linkonce`, `linkonce_odr`, `weak` or `weak_odr`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0539`.
